# asyncio_website_parser

./: .gitignore  main.py  pyproject.toml
website_pages/: www_python_org.html
